# Axiom

./: .gitignore  ANIMATION_SUCCESS_SUMMARY.md  AXIOM_TODO_ROADMAP.md  BOOT_ANALYSIS_REPORT.md  CHANGELOG.md  CLEANUP_PROGRESS_SUMMARY.md  COMPOSITOR_FIX_SUMMARY.md  COMPREHENSIVE_SECURITY_ANALYSIS.md  CONFIGURATION_SYSTEM_STATUS.md  CONTRIBUTING.md  CRITICAL_ANALYSIS.md  CRITICAL_BOOT_FIXES.md  DEVELOPMENT_PROGRESS_SUMMARY.md  DEVELOPMENT_STATUS.md  DEVELOPMENT_STATUS_AUGUST_2025.md  DWM_ANALYSIS.md  ENHANCEMENTS.md  FUNDAMENTALS_IMPROVEMENTS.md  GITHUB_RELEASE_v4.3.5.md  HARDCODED_VALUES_REPLACEMENT_SUMMARY.md  HYPRLAND_COMPARISON_ANALYSIS.md  IMMEDIATE_ACTION_PLAN.md  IMMEDIATE_FIXES.md  IMPLEMENTATION_COMPLETE.md  INITIALIZATION_FLOW_DIAGRAM.md  INITIALIZATION_SEQUENCE_ANALYSIS.md  INPUT_SYSTEM_STATUS.md  INTEGRATION_COMPLETE.md  LICENSE  NEXT_STEPS_COMPLETED.md  PHASE_2_2_INPUT_ENHANCEMENTS.md  PHASE_2_2_INPUT_ENHANCEMENT_COMPLETE.md  PHASE_3_1_IMPLEMENTATION_UPDATE.md  PHASE_3_1_MULTI_MONITOR_TILING_COMPLETE.md  PHASE_3_1_WINDOW_MANAGEMENT.md  PHASE_3_PLUS_COMPLETE.md  PLACEHOLDER_IMPROVEMENTS_COMPLETED.md  PROJECT_ANALYSIS_REPORT.md  PROTOCOL_NECESSITY.md  PROTOCOL_STATUS.md  (+84 more)
.github/workflows/: ci.yml  deploy-pages.yml
Projects /Axiom/: axiom-unified-updater.sh
axiom-release/: axiom
docs/: ANIMATION_SYSTEM.md  GETTING_STARTED.md  PHASE_1_COMPLETE.md  PHASE_2_1_COMPLETE.md  PHASE_2_2_COMPLETE.md  PHASE_2_3_COMPLETE.md  PHASE_2_4_COMPLETE.md  PHASE_2_ROADMAP.md  PHASE_3_ROADMAP.md  USER_GUIDE.md
examples/: axiom.conf  axiom_xwayland.conf  rules.conf  waybar-config.json
include/: advanced_tiling.h  animation.h  axiom.h  compositor.h  config.h  constants.h  dwindle_layout.h  effects.h  effects_realtime.h  enhanced_foreign_toplevel.h  enhanced_layer_shell.h  enhanced_xwayland.h  environment.h  errors.h  focus.h  input.h  keybindings.h  layer_shell.h  layout_manager.h  logging.h  memory.h  monitor_manager.h  multi_session.h  performance.h  pip_manager.h  renderer.h  screenshot.h  session.h  smart_gaps.h  tagging.h  thumbnail_manager.h  window_manager.h  window_rules.h  window_snapping.h  workspace_manager.h  xwayland.h
input_test_logs/: test_analysis_20250804_171520.txt  test_input_config.conf
man/: axiom.1
netlify-deploy/: README.md  index.html
protocols/: content-type-v1-protocol.h  ext-data-control-v1-protocol.h  ext-foreign-toplevel-list-v1-protocol.h  ext-idle-notify-v1-protocol.h  ext-image-copy-capture-v1-protocol.h  ext-session-lock-v1-protocol.h  fractional-scale-v1-protocol.h  idle-inhibit-unstable-v1-protocol.h  keyboard-shortcuts-inhibit-unstable-v1-protocol.h  linux-dmabuf-v1-protocol.c  linux-dmabuf-v1-protocol.h  pointer-gestures-unstable-v1-protocol.h  primary-selection-unstable-v1-protocol.h  security-context-v1-protocol.c  security-context-v1-protocol.h  single-pixel-buffer-v1-protocol.h  tablet-v2-protocol.h  text-input-unstable-v3-protocol.h  wlr-export-dmabuf-unstable-v1-protocol.h  wlr-gamma-control-unstable-v1-protocol.h  wlr-virtual-pointer-unstable-v1-protocol.h  xdg-activation-v1-protocol.h  xdg-decoration-unstable-v1-protocol.h  xdg-dialog-v1-protocol.h  xdg-foreign-unstable-v2-protocol.h  xdg-toplevel-drag-v1-protocol.h  xwayland-keyboard-grab-unstable-v1-protocol.c  xwayland-keyboard-grab-unstable-v1-protocol.h  xwayland-shell-v1-protocol.c  xwayland-shell-v1-protocol.h
src/: advanced_tiling.c  animation.c  compositor.c  config.c  cursor.c  dwindle_layout.c  effects.c  effects_realtime.c  enhanced_xwayland.c  environment.c  errors.c  focus.c  input.c  input_enhanced.c  keybindings.c  layer_shell.c  logging.c  main.c  memory.c  monitor_manager.c  multi_session.c  performance.c  pip_manager.c  process.c  renderer.c  screenshot.c  session.c  smart_gaps.c  tagging.c  thumbnail_manager.c  tiling.c  title_buttons.c  window_manager.c  window_rules.c  window_snapping.c  workspace.c  xwayland.c
tests/: animation_test_impl.c  test_animation.c  test_animation_config.c  test_basic.c  test_config.c  test_effects.c  test_memory.c  test_multi_session.c  test_pip_manager.c  test_protocols.c  test_thumbnail_manager.c  test_window_rules.c
website/: Dockerfile  index.html  manage-website.sh  nginx.conf
website/website/: tunnel.sh
